feat(UI): ajustes no layout das páginas de Foco +

--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -2,8 +2,8 @@
 
     <div>
     <div class="flex items-center gap-3">
-        <img src="ilha.png" class="w-10 h-10 bg-gray-300 rounded-md" alt="ilha">
-        <span class="text-2xl font-bold text-gray-800">Laugh Tale</span>
+        <img src="seta-para-cima.png" class="w-8 h-8" alt="seta-para-cima">
+        <span class="text-3xl font-bold text-gray-800">Foco +</span>
     </div>
 
     <ul class="space-y-7 mt-13">
@@ -47,8 +47,8 @@
             </div>
 
             <div>
-                <p class="text-sm font-medium text-gray-700">Joy Boy</p>
-                <p class="text-xs text-gray-500">joyboy@gmail.com</p>
+                <p class="text-sm font-medium text-gray-700">John Doe</p>
+                <p class="text-xs text-gray-500">johndoe@gmail.com</p>
             </div>
         </a>
 
