--- a/src/app/components/report-progress-overview/report-progress-overview.html
+++ b/src/app/components/report-progress-overview/report-progress-overview.html
@@ -10,12 +10,12 @@
         </div>
 
         <div>
-            <p class="text-sm text-muted-foreground text-white">XP Total</p>
+            <p class="text-sm text-muted-foreground text-white">XP da Semana</p>
             <p class="text-xl font-bold text-white">{{ weeklyXP }}</p>
         </div>
 
         <div>
-            <p class="text-sm text-muted-foreground text-white">XP Total</p>
+            <p class="text-sm text-muted-foreground text-white">XP do Mês</p>
             <p class="text-xl font-bold text-white">{{ monthlyXP }}</p>
         </div>
     </div>
