--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,5 +1,18 @@
 <div class="px-6 lg:px-10 py-6 w-full max-w-7xl mx-auto space-y-10">
 
+    <div class="flex justify-between items-center">
+
+        <div>
+            <h1 class="text-slate-600 text-xl font-semibold">
+                Visão geral dos estudos
+            </h1>
+            <p class="text-slate-500 text-sm">
+                Acompanhe seu progresso e desempenho atual
+            </p>
+        </div>
+
+    </div>
+
     <!-- KIPs (indicadores chave de desempenho) -->
         <div class="flex flex-wrap gap-3">
 
@@ -40,7 +53,7 @@
             </div>
         </div>
      <div class="bg-white rounded-xl shadow p-6 h-100 overflow-auto">
-        <h2 class="text-xl font-semibold mb-8">Progresso por Matéria</h2>
+        <h2 class="text-xl font-semibold mb-8">Progresso Atual por Matéria</h2>
 
         <div class="mb-8">
             <p class="font-medium">Língua Portuguesa<span class="float-right">100%</span></p>
