--- a/src/app/pages/metas/metas.html
+++ b/src/app/pages/metas/metas.html
@@ -2,7 +2,12 @@
     <div class="flex justify-between items-center">
 
         <div>
-            <h1 class="text-slate-600">Defina e acompanhe suas metas de estudos</h1>
+            <h1 class="text-slate-600 text-xl font-semibold">
+                Defina e acompanhe suas metas de estudos
+            </h1>
+            <p class="text-slate-500 text-sm">
+                Desafie-se além das atividades obrigatórias
+            </p>
         </div>
 
         <button class="flex items-center gap-2 px-4 py-2.5 bg-blue-600 hover:bg-blue-700 text-white rounded-lg transition-colors shadow-sm cursor-pointer">
