--- a/src/app/components/studies-table/studies-table.html
+++ b/src/app/components/studies-table/studies-table.html
@@ -14,7 +14,15 @@
         </thead>
 
             <tbody>
-                <tr *ngFor="let s of studies" class="border-b-0 hover:bg-slate-50 transition">
+                    <tr
+                    *ngFor="let s of studies"
+                    class="border-b-0 transition"
+                    [ngClass]="{
+                        'bg-blue-50 border-l-4 border-blue-500': s.status === 'em-andamento',
+                        'bg-slate-50': s.status === 'planejado'
+                    }"
+                    >
+
 
                     <td class="px-6 py-4">
                         <h3 class="font-semibold">{{ s.subject }}</h3>
@@ -40,8 +48,43 @@
                         </span>
                     </td>
 
-                    <td class="px-6 py-4 text-right">
-                        <lucide-icon name="ellipsis-vertical" class="text-gray-500 cursor-pointer"></lucide-icon>
+                    <td class="relative px-6 py-4 text-right">
+                        <lucide-icon 
+                        name="ellipsis-vertical"
+                        class="cursor-pointer"
+                        [ngClass]="{
+                            'text-gray-400': s.status === 'concluido',
+                            'text-gray-600': s.status !== 'concluido'
+                        }"
+                        (click)="toggleMenu(s.id)">
+                        </lucide-icon>
+
+
+                        <div *ngIf="openMenuId === s.id"
+                        class="absolute right-6 mt-2 w-50 bg-white border border-slate-200 rounded-lg
+                        shadow-lg z-50">
+                            <ul class="py-1 text-sm text-center hover">
+                                <li *ngIf="s.status === 'em-andamento'"
+                                 class="px-4 py-2 cursor-pointer transition-colors hover:bg-slate-100">
+                                    Marcar como concluído
+                                </li>
+                                <li *ngIf="s.status === 'em-andamento'"
+                                 class="px-4 py-2 cursor-pointer transition-colors hover:bg-slate-100">
+                                    Marcar sessão
+                                </li>
+                                <li *ngIf="s.status === 'planejado'"
+                                 class="px-4 py-2 cursor-pointer transition-colors hover:bg-slate-100">
+                                    Iniciar sessão
+                                </li>
+                                <li *ngIf="s.status === 'concluido'"
+                                 class="px-4 py-2 cursor-pointer transition-colors hover:bg-slate-100">
+                                    Reabrir sessão
+                                </li>
+                                <li class="px-4 py-2 cursor-pointer transition-colors hover:bg-slate-100 text-red-600">
+                                    Excluir
+                                </li>
+                            </ul>
+                        </div>
                     </td>
                 </tr>
             </tbody>
