--- a/src/app/pages/configuracoes/configuracoes.html
+++ b/src/app/pages/configuracoes/configuracoes.html
@@ -5,9 +5,15 @@
             <lucide-icon name="settings" class="bg-slate-200"></lucide-icon>
         </div>
 
-        <h1 class="text-sm text-slate-600">
-            Personalize sua experiência de estudos
-        </h1>
+        <div>
+            <h1 class="text-slate-600 text-xl font-semibold">
+                Conte mais sobre você
+            </h1>
+            <p class="text-slate-500 text-sm">
+                Forneça suas informações logo abaixo
+            </p>
+        </div>
+
     </div>
 
 <div class="bg-white rounded-lg  shadow-md border border-slate-200">
@@ -40,7 +46,7 @@
             <div class="flex items-center gap-6">
                 <div class="relative">
                     <div class="w-24 h-24 bg-blue-500 rounded-full flex items-center justify-center text-white text-2xl">
-                        JB
+                        JD
                     </div>
 
                     <button 
@@ -52,7 +58,7 @@
                 </div>
 
                 <div>
-                    <h3 class="text-slate-900">Joy Boy</h3>
+                    <h3 class="text-slate-900">John Doe</h3>
                     <p class="text-slate-600 text-sm">Aluno desde:</p>
                 </div>
             </div>
@@ -141,16 +147,24 @@
                 </div>
 
             </div>
-        <div>
+            <div>
             <label class="block text-sm text-slate-700 mb-2">Biografia</label>
-            <textarea 
+
+            <div class="relative">
+                <lucide-icon
+                name="pencil"
+                class="absolute left-2 top-2 w-4 h-4 text-slate-400 pointer-events-none">
+                </lucide-icon>
+
+                <textarea
                 rows="4"
                 placeholder="Quem sou eu?"
-                class="w-full px-2 py-2.5 border border-slate-200 rounded-lg
-                focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent
-                bg-slate-50 text-slate-600">
-            </textarea>
-        </div>
+                class="w-full pl-10 pr-3 py-2.5 border border-slate-200 rounded-lg
+                        focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent
+                        bg-slate-50 text-slate-600"></textarea>
+            </div>
+            </div>
+
     </div>
 
 </div>
