--- a/src/app/pages/estudos/estudos.html
+++ b/src/app/pages/estudos/estudos.html
@@ -2,7 +2,12 @@
     <div class="flex justify-between items-center">
 
         <div>
-            <h1 class="text-slate-600 text-md">Gerencie suas sessões de estudos</h1>
+            <h1 class="text-slate-600 text-xl font-semibold">
+                Sessões de estudo
+            </h1>
+            <p class="text-slate-500 text-sm">
+                Organize suas atividades, acompanhe o tempo e o andamento
+            </p>
         </div>
 
     <button class="flex items-center gap-2 px-4 py-2.5 bg-blue-600 hover:bg-blue-700 text-white rounded-lg transition-colors shadow-sm cursor-pointer">
@@ -28,12 +33,17 @@
 
     <div class="flex flex-col justify-center gap-3 mb-7">
 
+        <div>
+            <h2 class="text-sm text-slate-600">
+                Próximas sessões e atividades planejadas
+            </h2>
+        </div>
         <app-studies-filters></app-studies-filters>
 
     </div>
 
         <app-studies-table
-            [studies]="studies"
+            [studies]="orderedStudies"
             [statusConfig]="statusConfig">  
         </app-studies-table>
 </div>
