--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -48,7 +48,7 @@
 
             <div>
                 <p class="text-sm font-medium text-gray-700">John Doe</p>
-                <p class="text-xs text-gray-500">johndoe@gmail.com</p>
+                <p class="text-xs text-gray-500">john.doe@gmail.com</p>
             </div>
         </a>
 
