--- a/src/app/pages/configuracoes/configuracoes.html
+++ b/src/app/pages/configuracoes/configuracoes.html
@@ -31,14 +31,7 @@
         <p class="text-slate-600 text-sm">Gerencie suas informações pessoais</p>
       </div>
     </div>
-            
-            <div class="flex gap-2">
-            <button 
-            class="text-slate-500 bg-slate-200 hover:bg-slate-300 transition-colors p-2 
-            rounded-lg w-20 cursor-pointer">
-                Editar
-            </button>
-            </div>
+
         </div>
 
         <div class="p-6 space-y-6">
@@ -66,7 +59,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
 
                 <div>
-                    <label class="block text-sm text-slate-700 mb-2">Nome Completo</label>
+                    <label for="fullName" class="block text-sm text-slate-700 mb-2">Nome Completo</label>
                     <div class="relative">
                         <lucide-icon 
                         name="circle-user"
@@ -74,10 +67,11 @@
                     </lucide-icon>
 
                 <input 
-                    type="text" 
+                    type="text"
+                    id="fullName" 
                     placeholder="Nome Completo"
                     class="w-full pl-11 pr-4 py-2.5 border border-slate-200 rounded-lg
-                    focus:outline-none focus:ring=2 focus:ring-blue-500 focus:border-transparent
+                    focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent
                     bg-slate-50 text-slate-600"/>
                     </div>
                 </div>
@@ -93,7 +87,7 @@
                     type="email" 
                     placeholder="Email"
                     class="w-full pl-11 pr-4 py-2.5 border border-slate-200 rounded-lg
-                    focus:outline-none focus:ring=2 focus:ring-blue-500 focus:border-transparent
+                    focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent
                     bg-slate-50 text-slate-600"/>
                     </div>
                 </div>
@@ -109,7 +103,7 @@
                     type="tel" 
                     placeholder="Telefone"
                     class="w-full pl-11 pr-4 py-2.5 border border-slate-200 rounded-lg
-                    focus:outline-none focus:ring=2 focus:ring-blue-500 focus:border-transparent
+                    focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent
                     bg-slate-50 text-slate-600"/>
                     </div>
                 </div>
@@ -125,7 +119,7 @@
                     type="text" 
                     placeholder="Localização"
                     class="w-full pl-11 pr-4 py-2.5 border border-slate-200 rounded-lg
-                    focus:outline-none focus:ring=2 focus:ring-blue-500 focus:border-transparent
+                    focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent
                     bg-slate-50 text-slate-600"/>
                     </div>
                 </div>
@@ -138,10 +132,9 @@
                     </lucide-icon>
 
                 <input 
-                    type="text" 
-                    placeholder="Data de Nascimento"
+                    type="date" 
                     class="w-full pl-11 pr-4 py-2.5 border border-slate-200 rounded-lg
-                    focus:outline-none focus:ring=2 focus:ring-blue-500 focus:border-transparent
+                    focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent
                     bg-slate-50 text-slate-600"/>
                     </div>
                 </div>
