docs: adicionando arquivo guide.md e manual de instruções na página de configurações

--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -38,18 +38,27 @@
             <span class="text-xl font-medium">Relatórios</span>
         </a>
         </li>
+
+        <li>
+            <a href="/configuracoes" routerLinkActive="active"
+            class="flex items-center gap-3 text-gray-700 hover:text-blue-600 transition">
+            <lucide-icon name="settings"></lucide-icon>
+            <span class="text-xl font-medium">Configurações</span>
+        </a>
+        </li>
+        
     </ul>
     </div>
 
-        <a routerLink="/configuracoes" class="flex items-end gap-3 p-3 rounded-md hover:bg-gray-200 cursor-pointer transition">
+        <div class="flex gap-3 items-center">
             <div class="h-10 w-10 rounded-full bg-gray-500 flex items-center justify-center font-bold">
-                J
+              J
             </div>
-
-            <div>
-                <p class="text-sm font-medium text-gray-700">John Doe</p>
-                <p class="text-xs text-gray-500">john.doe@gmail.com</p>
-            </div>
-        </a>
+              
+              <div>
+                  <p class="text-sm font-medium text-gray-700">John Doe</p>
+                  <p class="text-xs text-gray-500">john.doe@gmail.com</p>
+                </div>
+        </div>
 
 </nav>
