feat: implementando filtros para as páginas de estudos e metas

--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -27,7 +27,7 @@
             <a href="/metas" routerLinkActive="active"
             class="flex items-center gap-3 text-gray-700 hover:text-blue-600 transition">
             <lucide-icon name="goal"></lucide-icon>
-            <span class="text-xl font-medium">Metas do Aluno</span>
+            <span class="text-xl font-medium">Metas</span>
         </a>
         </li>
 
