--- a/src/app/pages/metas/metas.html
+++ b/src/app/pages/metas/metas.html
@@ -25,10 +25,13 @@
 
     <div class="flex flex-col justify-center gap-3 mb-7">
 
-        <app-studies-filters 
-            variant="goals"
-            (searchChange)="goalSearchTerm = $event"
-        ></app-studies-filters>
+    <app-studies-filters
+        variant="goals"
+        [resultsCount]="filteredGoals.length"
+        [searchQuery]="goalSearchTerm"
+        emptyMessage="Nenhuma meta encontrada"
+        (searchChange)="goalSearchTerm = $event"
+    ></app-studies-filters>
 
     </div>
 
